--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Joey Quiz</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  
 </head>
 <body>
 
@@ -299,11 +300,20 @@
       </div>
     </form>
 
-    
-
+          <!-- footer -->
+          <style>i{color:white}i:hover{color:turquoise}footer{ margin-top:75px;}footer ul{list-style-type: none;}footer ul li{position: relative;left:-20; display: inline-block;}</style>
+          <footer class="text-center">
+              <ul>
+                <li class="px-1"><a href="https://www.linkedin.com/in/arjun-p-12b423192/"  target="_blank"><i class="fab fa-2x fa-linkedin"></i></a></li>
+                <li class="px-1"><a href="https://www.facebook.com/arjunarc/" target="_blank"><i class="fab fa-2x fa-facebook-square"></i></a></li>
+                <li class="px-1"><a href="https://github.com/Arjun-Arc"  target="_blank"><i class="fab fa-2x fa-github-square"></i></a></li>
+              </ul>
+          </footer>
 
     </div>
   </div>
+
+  <script src="https://kit.fontawesome.com/3b25efd71b.js" crossorigin="anonymous"></script>
   <script src="quiz.js"></script>
 </body>
 </html>
